# FastApiTutorial

./: items.py  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 2024_09_10_1057-c56b33cfcc11_create_products_tabel.py  2024_09_10_1114-28dfd9fc9636_create_users_table.py  2024_09_10_1149-274479e7b43b_create_post_table.py  2024_09_10_1334-b4e41b9354a5_create_profile_table_and_add_it_ro_user.py  2024_09_10_1339-c2bbb97dbbb3_create_profile_table_and_add_it_ro_userr.py  2024_09_13_1505-5c8db790c7fd_create_order_table.py  2024_09_13_2330-a004607508cf_create_order_product_association_table.py
api_v1/products/: crud.py  schemas.py  views.py
core/: config.py
core/models/: __init__.py  base.py  db_helper.py  mixins.py  order.py  order_product_association.py  post.py  products.py  profile.py  user.py
users/: crud.py  schemas.py  views.py
